--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,6 @@
-joblib==1.4.2
-markdown-it-py==3.0.0
-matplotlib==3.9.2
+streamlit==1.40.2
+nltk==3.9.1
+scikit-learn==1.5.2
 numpy==2.1.3
 pandas==2.2.3
-pillow==11.0.0
-scikit-learn==1.5.2
-streamlit==1.40.2
+sweetviz==2.3.1
